# dfmirage

./: .gitignore  CMakeLists.txt  Dimension.h  Exception.h  Makefile  Makefile.minGW  Makefile.x64  Makefile.x86  MirrorDriverClient.cpp  MirrorDriverClient.h  PixelFormat.cpp  PixelFormat.h  Point.h  README.md  Rect.h  RegistryKey.cpp  RegistryKey.h  StopWatch.h  StringStorage.cpp  StringStorage.h  dfmirage.pro  main.cpp  main.cpp.按照每帧时间等待
Decoder/: H264Encoder.h
Decoder/lib/: libx264.lib
Decoder/libx264-x64/lib/: libx264.exp  libx264.lib
Decoder/libx264-x64/lib/pkgconfig/: x264.pc
IPCamera/lib/: libEasyIPCamera.lib
IPCamera/lib64/: libEasyIPCamera.lib
IPCamera64/include/: EasyIPCameraAPI.h  EasyTypes.h
doc/: libyuv_clang.rar
exception/: Exception.cpp  SystemException.cpp  SystemException.h
ffmpeg/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg/share/man/man1/: ffmpeg-all.1  ffmpeg-filters.1  ffmpeg.1
ffmpeg64/lib/: avcodec.lib  avdevice.lib  avfilter.lib  avformat.lib  avutil-57.def  avutil.lib  postproc.lib  swresample.lib  swscale.lib
ffmpeg64/lib/pkgconfig/: libavcodec.pc  libavdevice.pc  libavfilter.pc  libavformat.pc  libavutil.pc  libpostproc.pc  libswresample.pc  libswscale.pc
ffmpeg64/share/man/man1/: ffmpeg-bitstream-filters.1  ffmpeg-codecs.1  ffmpeg-devices.1  ffmpeg-formats.1  ffmpeg-protocols.1  ffmpeg-utils.1  ffprobe-all.1  ffprobe.1
jrtplib/: CMakeLists.txt  JrtpUitls.cpp  JrtpUitls.h
jrtplib/include/jrtplib3/: rtpconfig.h
jrtplib/lib64/: jrtplib.lib  jrtplib_d.lib
jrtplib/lib64/cmake/JRTPLIB/: JRTPLIBConfig.cmake
libx264/: CMakeLists.txt  H264Encoder.cpp
libx264/lib/: libx264.exp
libx264/lib/pkgconfig/: x264.pc
libyuv/: CMakeLists.txt  yuv_util.cpp  yuv_util.h
libyuv/lib/: libyuv.def  libyuv.exp  libyuv2.lib
thread/: AutoLock.cpp  AutoLock.h  GlobalMutex.cpp  GlobalMutex.h  LocalMutex.cpp  LocalMutex.h  Lockable.h
